Fix gap between pages

--- a/src/index.css
+++ b/src/index.css
@@ -345,7 +345,7 @@ button[data-active="true"] {
   grid-template-columns: 8.5in 8.5in;
   gap: 0.75rem;
   column-gap: 0.75rem;
-  row-gap: 0.75rem;
+  row-gap: 0.25rem;
   min-height: 24in;
 }
 
